--- a/DemoMVC.Models/DemoMVC.Models.csproj
+++ b/DemoMVC.Models/DemoMVC.Models.csproj
@@ -74,8 +74,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountModel.cs" />
+    <Compile Include="AuthorizeFormAccess.cs" />
     <Compile Include="DemoMVCContextConfiguration.cs" />
     <Compile Include="DemoMVCEntities.cs" />
+    <Compile Include="FormModel.cs" />
+    <Compile Include="Forms.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolesModel.cs" />
     <Compile Include="SessionHelper.cs" />
