--- a/DemoMVC.Models/DemoMVC.Models.csproj
+++ b/DemoMVC.Models/DemoMVC.Models.csproj
@@ -73,11 +73,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessPermission.cs" />
     <Compile Include="AccountModel.cs" />
     <Compile Include="AuthorizeFormAccess.cs" />
     <Compile Include="DemoMVCContextConfiguration.cs" />
     <Compile Include="DemoMVCEntities.cs" />
     <Compile Include="FormModel.cs" />
+    <Compile Include="FormRoleMapping.cs" />
     <Compile Include="Forms.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolesModel.cs" />
