--- a/DemoMVC.Service/DemoMVC.Service.csproj
+++ b/DemoMVC.Service/DemoMVC.Service.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActivityLogService.cs" />
+    <Compile Include="ErrorLogService.cs" />
     <Compile Include="FormRoleMappingService.cs" />
     <Compile Include="FormsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
