--- a/DemoMVC.Models/DemoMVC.Models.csproj
+++ b/DemoMVC.Models/DemoMVC.Models.csproj
@@ -82,6 +82,7 @@
     <Compile Include="FormModel.cs" />
     <Compile Include="FormRoleMapping.cs" />
     <Compile Include="Forms.cs" />
+    <Compile Include="MenuVW.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolesModel.cs" />
     <Compile Include="SessionHelper.cs" />
