--- a/DemoMVC.Data/DemoMVC.Data.csproj
+++ b/DemoMVC.Data/DemoMVC.Data.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ErrorLogProvider.cs" />
     <Compile Include="FormRoleMappingProvider.cs" />
     <Compile Include="FormsProvider.cs" />
+    <Compile Include="MessageProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolesProvider.cs" />
     <Compile Include="UserProfileProvider.cs" />
