--- a/DemoMVC.Models/DemoMVC.Models.csproj
+++ b/DemoMVC.Models/DemoMVC.Models.csproj
@@ -84,6 +84,7 @@
     <Compile Include="FormRoleMapping.cs" />
     <Compile Include="Forms.cs" />
     <Compile Include="MenuVW.cs" />
+    <Compile Include="Message_Mst.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RolesModel.cs" />
     <Compile Include="SessionHelper.cs" />
