--- a/DemoMVC.WebUi/DemoMVC.WebUi.csproj
+++ b/DemoMVC.WebUi/DemoMVC.WebUi.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ActivityLogController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CommonLookupController.cs" />
     <Compile Include="Controllers\ErrorLogController.cs" />
     <Compile Include="Controllers\FormController.cs" />
     <Compile Include="Controllers\FormRoleMappingController.cs" />
@@ -173,6 +174,7 @@
     </Compile>
     <Compile Include="Helper\CommonUtility.cs" />
     <Compile Include="Helper\FormUtility.cs" />
+    <Compile Include="Models\CommonLookupModel.cs" />
     <Compile Include="Models\FormModel.cs" />
     <Compile Include="Models\RolesModel.cs" />
     <Compile Include="Models\UserProfileModel.cs" />
@@ -2455,6 +2457,8 @@
     <Content Include="Views\Shared\EditorTemplates\_MessageEditor.cshtml" />
     <Content Include="Views\Shared\_ActivityLogPopUp.cshtml" />
     <Content Include="Views\Shared\_ErrorLogPopUp.cshtml" />
+    <Content Include="Views\CommonLookup\Create.cshtml" />
+    <Content Include="Views\CommonLookup\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
