--- a/DemoMVC.Helper/DemoMVC.Helper.csproj
+++ b/DemoMVC.Helper/DemoMVC.Helper.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="LookupType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
