--- a/DemoMVC.Models/DemoMVC.Models.csproj
+++ b/DemoMVC.Models/DemoMVC.Models.csproj
@@ -77,6 +77,7 @@
     <Compile Include="AccountModel.cs" />
     <Compile Include="ActivityLog.cs" />
     <Compile Include="AuthorizeFormAccess.cs" />
+    <Compile Include="CommonLookup.cs" />
     <Compile Include="DemoMVCContextConfiguration.cs" />
     <Compile Include="DemoMVCEntities.cs" />
     <Compile Include="ErrorLog.cs" />
