--- a/DemoMVC.Service/DemoMVC.Service.csproj
+++ b/DemoMVC.Service/DemoMVC.Service.csproj
@@ -70,6 +70,7 @@
     <Compile Include="MessageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleService.cs" />
+    <Compile Include="QuestionTypeService.cs" />
     <Compile Include="SubjectService.cs" />
     <Compile Include="UserProfileService.cs" />
   </ItemGroup>
