--- a/DemoMVC.Data/DemoMVC.Data.csproj
+++ b/DemoMVC.Data/DemoMVC.Data.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivityLogProvider.cs" />
+    <Compile Include="AnswerProvider.cs" />
     <Compile Include="BaseProvider.cs" />
     <Compile Include="CommonLookupProvider.cs" />
     <Compile Include="ErrorLogProvider.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="FormsProvider.cs" />
     <Compile Include="MessageProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionProvider.cs" />
     <Compile Include="RolesProvider.cs" />
     <Compile Include="QuestionTypeProvider.cs" />
     <Compile Include="SubjectProvider.cs" />
