--- a/DemoMVC.Service/DemoMVC.Service.csproj
+++ b/DemoMVC.Service/DemoMVC.Service.csproj
@@ -63,12 +63,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivityLogService.cs" />
+    <Compile Include="AnswerService.cs" />
     <Compile Include="CommonLookupService.cs" />
     <Compile Include="ErrorLogService.cs" />
     <Compile Include="FormRoleMappingService.cs" />
     <Compile Include="FormsService.cs" />
     <Compile Include="MessageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionService.cs" />
     <Compile Include="RoleService.cs" />
     <Compile Include="QuestionTypeService.cs" />
     <Compile Include="SubjectService.cs" />
