--- a/DemoMVC.Data/packages.config
+++ b/DemoMVC.Data/packages.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.5.1" targetFramework="net461" />
+  <package id="Grpc.Core" version="2.46.6" targetFramework="net461" />
+  <package id="Grpc.Core.Api" version="2.46.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
 </packages>
