--- a/DemoMVC.WebUi/packages.config
+++ b/DemoMVC.WebUi/packages.config
@@ -11,7 +11,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.3.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="5.0.17" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.1" targetFramework="net461" />
   <package id="Microsoft.Graph.Core" version="1.25.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net461" />
@@ -19,9 +21,11 @@
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net461" />
+  <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
