--- a/DemoMVC.Models/DemoMVC.Models.csproj
+++ b/DemoMVC.Models/DemoMVC.Models.csproj
@@ -82,6 +82,7 @@
     <Compile Include="DemoMVCContextConfiguration.cs" />
     <Compile Include="DemoMVCEntities.cs" />
     <Compile Include="ErrorLog.cs" />
+    <Compile Include="Exams.cs" />
     <Compile Include="FormRoleMapping.cs" />
     <Compile Include="Forms.cs" />
     <Compile Include="MenuVW.cs" />
