ExamQuestion Created In Exam View

--- a/DemoMVC.Data/DemoMVC.Data.csproj
+++ b/DemoMVC.Data/DemoMVC.Data.csproj
@@ -98,6 +98,7 @@
     <Compile Include="CommonLookupProvider.cs" />
     <Compile Include="ErrorLogProvider.cs" />
     <Compile Include="ExamProvider.cs" />
+    <Compile Include="ExamQuestionsProvider.cs" />
     <Compile Include="FormRoleMappingProvider.cs" />
     <Compile Include="FormsProvider.cs" />
     <Compile Include="MessageProvider.cs" />
