--- a/DemoMVC.Service/DemoMVC.Service.csproj
+++ b/DemoMVC.Service/DemoMVC.Service.csproj
@@ -66,6 +66,7 @@
     <Compile Include="AnswerService.cs" />
     <Compile Include="CommonLookupService.cs" />
     <Compile Include="ErrorLogService.cs" />
+    <Compile Include="ExamLinkService.cs" />
     <Compile Include="ExamQuestionsService.cs" />
     <Compile Include="ExamService.cs" />
     <Compile Include="FormRoleMappingService.cs" />
