--- a/DemoMVC.Data/DemoMVC.Data.csproj
+++ b/DemoMVC.Data/DemoMVC.Data.csproj
@@ -107,6 +107,7 @@
     <Compile Include="RolesProvider.cs" />
     <Compile Include="QuestionTypeProvider.cs" />
     <Compile Include="SubjectProvider.cs" />
+    <Compile Include="UserExamProvider.cs" />
     <Compile Include="UserProfileProvider.cs" />
   </ItemGroup>
   <ItemGroup>
