--- a/DemoMVC.WebUi/Web.config
+++ b/DemoMVC.WebUi/Web.config
@@ -96,4 +96,15 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<system.net>
+		<mailSettings>
+			<smtp from="pateljainish2884@gmail.com">
+				<network host="smtp.gmail.com"
+                 port="587"
+                 userName="pateljainish2884@gmail.com"
+                 password="qvbc gcij nkny ezoz"
+                 enableSsl="true"/>
+			</smtp>
+		</mailSettings>
+	</system.net>
 </configuration>
