Set Timer and auto save on tine up

--- a/DemoMVC.WebUi/DemoMVC.WebUi.csproj
+++ b/DemoMVC.WebUi/DemoMVC.WebUi.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Controllers\SendMailController.cs" />
     <Compile Include="Controllers\SubjectController.cs" />
     <Compile Include="Controllers\UserAnswerController.cs" />
+    <Compile Include="Controllers\UserExamCheckController.cs" />
     <Compile Include="Controllers\UserExamController.cs" />
     <Compile Include="Controllers\UserProfileController.cs" />
     <Compile Include="Filters\ActivityLogFilter.cs" />
@@ -204,6 +205,7 @@
     <Compile Include="Models\StartTestModel.cs" />
     <Compile Include="Models\SubjectModel.cs" />
     <Compile Include="Models\UserAnswerModel.cs" />
+    <Compile Include="Models\UserExamChekingModel.cs" />
     <Compile Include="Models\UserExamModel.cs" />
     <Compile Include="Models\UserProfileModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -2506,6 +2508,7 @@
     <Content Include="Views\UserExam\UserExamLogIn.cshtml" />
     <Content Include="Views\UserExam\ExamSummary.cshtml" />
     <Content Include="Views\Shared\ErrorPage.cshtml" />
+    <Content Include="Views\UserExamCheck\CheckExam.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
