--- a/DemoMVC.WebUi/Web.config
+++ b/DemoMVC.WebUi/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DemoMVCConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=DemoMVC;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DemoMVCConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=DemoMVC;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="Forms">
