Clean code and add validation for completed exam

--- a/DemoMVC.WebUi/Web.config
+++ b/DemoMVC.WebUi/Web.config
@@ -99,11 +99,7 @@
 	<system.net>
 		<mailSettings>
 			<smtp from="pateljainish2884@gmail.com">
-				<network host="smtp.gmail.com"
-                 port="587"
-                 userName="pateljainish2884@gmail.com"
-                 password="qvbc gcij nkny ezoz"
-                 enableSsl="true"/>
+				<network host="smtp.gmail.com" port="587" userName="pateljainish2884@gmail.com" password="qvbc gcij nkny ezoz" enableSsl="true" />
 			</smtp>
 		</mailSettings>
 	</system.net>
