--- a/DemoMVC.WebUi/packages.config
+++ b/DemoMVC.WebUi/packages.config
@@ -13,12 +13,14 @@
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Features" version="5.0.17" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.1" targetFramework="net461" />
   <package id="Microsoft.Graph.Core" version="1.25.1" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net461" />
+  <package id="Quartz" version="3.14.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net461" />
   <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net461" />
