--- a/DemoMVC.Models/DemoMVC.Models.csproj
+++ b/DemoMVC.Models/DemoMVC.Models.csproj
@@ -89,6 +89,7 @@
     <Compile Include="MenuVW.cs" />
     <Compile Include="Message_Mst.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionMedia.cs" />
     <Compile Include="Questions.cs" />
     <Compile Include="QuestionType.cs" />
     <Compile Include="SessionHelper.cs" />
