--- a/DemoMVC.Service/DemoMVC.Service.csproj
+++ b/DemoMVC.Service/DemoMVC.Service.csproj
@@ -72,6 +72,7 @@
     <Compile Include="FormsService.cs" />
     <Compile Include="MessageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionMediaService.cs" />
     <Compile Include="QuestionService.cs" />
     <Compile Include="RoleService.cs" />
     <Compile Include="QuestionTypeService.cs" />
