--- a/DemoMVC.WebUi/packages.config
+++ b/DemoMVC.WebUi/packages.config
@@ -2,7 +2,10 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="5.2.3" targetFramework="net461" />
+  <package id="ClosedXML" version="0.95.4" targetFramework="net461" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net461" />
+  <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net461" />
   <package id="jQuery" version="3.7.0" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net461" />
@@ -13,6 +16,7 @@
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Features" version="5.0.17" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.1" targetFramework="net461" />
   <package id="Microsoft.Graph.Core" version="1.25.1" targetFramework="net461" />
@@ -23,6 +27,8 @@
   <package id="Quartz" version="3.14.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
   <package id="System.IO.Pipelines" version="5.0.2" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
