--- a/DemoMVC.Data/packages.config
+++ b/DemoMVC.Data/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
